--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -3,6 +3,9 @@ ASTRO - Release Notes:
 1.5 (Sprint 5):
 	- Functionality added to change my location and have the data update
 	- Input sanitized
+	- Project Presentation Finalized
+	- Final Release launched
+	- Finishing touches added
 
 
 1.4 (Sprint 4):
